[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hazard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/KillBoundary.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/World.gd" type="Script" id=5]
[ext_resource path="res://scripts/Helper/Follow.gd" type="Script" id=6]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=8]
[ext_resource path="res://sound/win.wav" type="AudioStream" id=10]
[ext_resource path="res://scripts/TimeTracker.gd" type="Script" id=11]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( -301, -39 )

[node name="Hazard" parent="." instance=ExtResource( 3 )]

[node name="ResetTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -72 )
current = true
zoom = Vector2( 0.25, 0.25 )
script = ExtResource( 6 )
target_nodepath = "Character"

[node name="GUI" type="Control" parent="Camera2D"]
margin_left = -128.0
margin_top = -75.0
margin_right = 128.0
margin_bottom = 75.0
mouse_filter = 2
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathLabel" type="Label" parent="Camera2D/GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -40.0
margin_right = 64.0
margin_bottom = -26.0
grow_horizontal = 2
theme = ExtResource( 8 )
text = "looks like you died"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryLabel" type="Label" parent="Camera2D/GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -50.0
margin_right = 64.0
margin_bottom = -26.0
grow_horizontal = 2
text = "congratulations!
you won with only"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Camera2D/GUI/VictoryLabel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = 6.0
margin_right = 28.0
text = "# deaths"
align = 1

[node name="Best" type="Label" parent="Camera2D/GUI/VictoryLabel/Deaths"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 6.0
margin_right = 20.0
text = "best: #"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatorBest" type="Label" parent="Camera2D/GUI/VictoryLabel/Deaths/Best"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = 6.0
margin_right = 52.0
text = "creator's best: #"
align = 1

[node name="Block Label" type="Label" parent="Camera2D/GUI"]
anchor_right = 0.09375
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
text = "Blocks:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCountLabel" type="Label" parent="Camera2D/GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 0 )
text = "Deaths: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="Camera2D/GUI"]
margin_left = 9.0
margin_top = 23.0
margin_right = 49.0
margin_bottom = 34.0
text = "Elapsed time: 0"

[node name="Goal" parent="." instance=ExtResource( 7 )]
position = Vector2( 5240, -392 )

[node name="KillBoundary" parent="." instance=ExtResource( 4 )]
position = Vector2( 1200, -136 )

[node name="KillBoundary2" parent="." instance=ExtResource( 4 )]
position = Vector2( 4072, -416 )

[node name="KillBoundary" parent="KillBoundary2" instance=ExtResource( 4 )]
position = Vector2( -5423, 309 )

[node name="Hazard2" parent="." instance=ExtResource( 3 )]
position = Vector2( 104, -8 )

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="Tutorials" type="Control" parent="."]
margin_left = 48.0
margin_top = -142.0
margin_right = 88.0
margin_bottom = -102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Label" parent="Tutorials"]
margin_left = -334.0
margin_top = 52.0
margin_right = -247.0
margin_bottom = 105.0
theme = ExtResource( 8 )
text = "AD to move.
W to jump.

good luck."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial 2" type="Label" parent="Tutorials"]
margin_left = -51.0
margin_top = 66.0
margin_right = 108.0
margin_bottom = 97.0
theme = ExtResource( 8 )
text = "right click to place block.
use wisely."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial 3" type="Label" parent="Tutorials"]
margin_left = 4356.0
margin_top = -256.0
margin_right = 4571.0
margin_bottom = -242.0
theme = ExtResource( 8 )
text = "hope you saved a couple blocks..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTracker" type="Timer" parent="."]
script = ExtResource( 11 )
